crates/tribute-front/tests/snapshots/tuple_pattern__tuple_let_destructure_from_function.snap
---
source: crates/tribute-front/tests/tuple_pattern.rs
expression: ir_text
---
core.module @test {
  !__logical_tuple_tuple_3_1_2_3_nat_3_nat = adt.struct<{fields = [[@0, core.i32], [@1, core.i32]], name = @__logical_tuple_tuple_3_1_2_3_nat_3_nat}>
  !__logical_tuple_tuple_3_1_2_3_nat_3_nat_1 = adt.typeref<{name = @__logical_tuple_tuple_3_1_2_3_nat_3_nat}>

  tribute_control.func @make_pair(%0: core.i32, %1: core.i32) -> !__logical_tuple_tuple_3_1_2_3_nat_3_nat_1 convention(direct) {
      %2 = adt.struct_new %0, %1 {type = !__logical_tuple_tuple_3_1_2_3_nat_3_nat} : !__logical_tuple_tuple_3_1_2_3_nat_3_nat_1
      tribute_control.return %2
  }
  tribute_control.func @"Nat::+"(%arg0: core.i32, %arg1: core.i32) -> core.i32 convention(direct)
  tribute_control.func @test() -> core.i32 convention(direct) {
      %0 = arith.const {value = 10} : core.i32
      %1 = arith.const {value = 20} : core.i32
      %2 = tribute_control.call %0, %1 {callee = @make_pair} : !__logical_tuple_tuple_3_1_2_3_nat_3_nat_1
      %3 = adt.struct_get %2 {field = 0, type = !__logical_tuple_tuple_3_1_2_3_nat_3_nat} : core.i32
      %4 = adt.struct_get %2 {field = 1, type = !__logical_tuple_tuple_3_1_2_3_nat_3_nat} : core.i32
      %5 = tribute_control.call %3, %4 {callee = @"Nat::+"} : core.i32
      tribute_control.return %5
  }
}
