crates/tribute-front/tests/snapshots/tuple_pattern__tuple_let_destructure_nested.snap
---
source: crates/tribute-front/tests/tuple_pattern.rs
expression: ir_text
---
core.module @test {
  !__logical_tuple_tuple_3_1_2_3_nat_23_tuple_3_1_2_3_nat_3_nat = adt.struct<__logical_tuple_tuple_3_1_2_3_nat_23_tuple_3_1_2_3_nat_3_nat("0": core.i32, "1": adt.typeref<{name = "__logical_tuple_tuple_3_1_2_3_nat_3_nat"}>)>
  !__logical_tuple_tuple_3_1_2_3_nat_3_nat = adt.struct<__logical_tuple_tuple_3_1_2_3_nat_3_nat("0": core.i32, "1": core.i32)>
  !__logical_tuple_tuple_3_1_2_3_nat_3_nat_1 = adt.typeref<{name = "__logical_tuple_tuple_3_1_2_3_nat_3_nat"}>
  !__logical_tuple_tuple_3_1_2_3_nat_23_tuple_3_1_2_3_nat_3_nat_1 = adt.typeref<{name = "__logical_tuple_tuple_3_1_2_3_nat_23_tuple_3_1_2_3_nat_3_nat"}>

  tribute_control.func @"Nat::+"(%arg0: core.i32, %arg1: core.i32) -> core.i32 convention(direct)
  tribute_control.func @test() -> core.i32 convention(direct) {
      %0 = arith.const {value = 1} : core.i32
      %1 = arith.const {value = 2} : core.i32
      %2 = arith.const {value = 3} : core.i32
      %3 = adt.struct_new %1, %2 {type = !__logical_tuple_tuple_3_1_2_3_nat_3_nat} : !__logical_tuple_tuple_3_1_2_3_nat_3_nat_1
      %4 = adt.struct_new %0, %3 {type = !__logical_tuple_tuple_3_1_2_3_nat_23_tuple_3_1_2_3_nat_3_nat} : !__logical_tuple_tuple_3_1_2_3_nat_23_tuple_3_1_2_3_nat_3_nat_1
      %5 = adt.struct_get %4 {field = 0, type = !__logical_tuple_tuple_3_1_2_3_nat_23_tuple_3_1_2_3_nat_3_nat} : core.i32
      %6 = adt.struct_get %4 {field = 1, type = !__logical_tuple_tuple_3_1_2_3_nat_23_tuple_3_1_2_3_nat_3_nat} : !__logical_tuple_tuple_3_1_2_3_nat_3_nat_1
      %7 = adt.struct_get %6 {field = 0, type = !__logical_tuple_tuple_3_1_2_3_nat_3_nat} : core.i32
      %8 = adt.struct_get %6 {field = 1, type = !__logical_tuple_tuple_3_1_2_3_nat_3_nat} : core.i32
      %9 = tribute_control.call %5, %7 {callee = @"Nat::+"} : core.i32
      %10 = tribute_control.call %9, %8 {callee = @"Nat::+"} : core.i32
      tribute_control.return %10
  }
}
