crates/tribute-front/tests/snapshots/tuple_pattern__tuple_pattern_constructor_element.snap
---
source: crates/tribute-front/tests/tuple_pattern.rs
expression: ir_text
---
core.module @test {
  !Item = adt.enum<Item { Number(core.i32), Empty() }>
  !__logical_tuple_tuple_3_1_2_36_named_1_25_nominal_2_6_source_4_Item_3_nat = adt.struct<__logical_tuple_tuple_3_1_2_36_named_1_25_nominal_2_6_source_4_Item_3_nat("0": adt.typeref<{name = "Item"}>, "1": core.i32)>
  !Item_1 = adt.typeref<{name = "Item"}>
  !__logical_tuple_tuple_3_1_2_36_named_1_25_nominal_2_6_source_4_Item_3_nat_1 = adt.typeref<{name = "__logical_tuple_tuple_3_1_2_36_named_1_25_nominal_2_6_source_4_Item_3_nat"}>

  tribute_control.func @"std::Nat::+"(%arg0: core.i32, %arg1: core.i32) -> core.i32 convention(direct)
  tribute_control.func @first(%0: !__logical_tuple_tuple_3_1_2_36_named_1_25_nominal_2_6_source_4_Item_3_nat_1) -> core.i32 convention(direct) {
      %1 = adt.struct_get %0 {field = 0, type = !__logical_tuple_tuple_3_1_2_36_named_1_25_nominal_2_6_source_4_Item_3_nat} : !Item_1
      %2 = adt.variant_is %1 {tag = "Number", type = !Item} : core.i1
      %3 = scf.if %2 : core.i1 {
          %4 = adt.variant_cast %1 {tag = "Number", type = !Item} : !Item
          %5 = adt.variant_get %4 {field = 0, tag = "Number", type = !Item} : core.i32
          %6 = arith.const {value = true} : core.i1
          scf.yield %6
      } {
          %7 = arith.const {value = false} : core.i1
          scf.yield %7
      }
      %8 = adt.struct_get %0 {field = 1, type = !__logical_tuple_tuple_3_1_2_36_named_1_25_nominal_2_6_source_4_Item_3_nat} : core.i32
      %9 = arith.const {value = true} : core.i1
      %10 = arith.and %3, %9 : core.i1
      %11 = scf.if %10 : core.i32 {
          %12 = adt.struct_get %0 {field = 0, type = !__logical_tuple_tuple_3_1_2_36_named_1_25_nominal_2_6_source_4_Item_3_nat} : !Item_1
          %13 = adt.variant_cast %12 {tag = "Number", type = !Item} : !Item
          %14 = adt.variant_get %13 {field = 0, tag = "Number", type = !Item} : core.i32
          %15 = adt.struct_get %0 {field = 1, type = !__logical_tuple_tuple_3_1_2_36_named_1_25_nominal_2_6_source_4_Item_3_nat} : core.i32
          %16 = tribute_control.call %14, %15 {callee = @"std::Nat::+"} : core.i32
          scf.yield %16
      } {
          %17 = arith.const {value = 0} : core.i32
          scf.yield %17
      }
      tribute_control.return %11
  }
}
